--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -24,7 +24,6 @@ body {
 .container {
   max-width: 80rem;
   margin: 0 auto;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,7 +59,7 @@ body {
   width: 12rem;
   background-color: #edc84b;
   position: absolute;
-  top: calc(50% - 1px);
+  top: calc(100% - 2px);
 }
 
 .header h1::before {
@@ -153,6 +152,10 @@ body {
 
 .footer {
   font-size: 1.4rem;
+}
+
+.footer h4 {
+  text-align: center;
 }
 
 .order {
